- Implemented support for underlined fonts in wxStaticText.
- wxTopLevelWindow::SetSizeHints size increments now work.
- wxTopLevelWindow::GetSize() returns the size including the WM decorations.
- wxTopLevelWindow::GetClientSize() returns 0x0 when the window is minimized.
- Added support for colour cursors (Pascal Monasse).
- Setting foreground colour of single line wxTextCtrl now works

wxMac:

- Fix duplicate (empty) help menu in non-English programs (Andreas Jacobs)

wxMSW:

- Fixed infinite loop in wxThread::Wait() in console applications.
- Return the restored window size from GetSize() when window is minimized.


2.8.4
-----

All (Unix):

- Handle socket shutdown by the peer correctly in wxSocket (Tim Kosse)

wxMSW:

- Corrected wxStaticBox label appearance when its foreground colour was set:
  it didn't respect font size nor background colour then (Juan Antonio Ortega)
- Don't lose combobox text when it's opened and closed (Kolya Kosenko)
- Corrected GetChecked() for events from checkable menu items (smanders)
- Fixed popup menus under Windows NT 4
- Fixed bug in wxThread::Wait() in console applications introduced in 2.8.3
- Compilation fixed with WXWIN_COMPATIBILITY_2_6==0

wxGTK:

- Fix infinite loop when adding a wxStaticText control to a toolbar
- Fix wxNO_BORDER style for wxRadioBox (David Hart)


2.8.3
-----

All:

- Shut down the sockets gracefully (Sergio Aguayo)
- Fix extra indentation in wxHTML_ALIGN_JUSTIFY display (Chacal)

wxMac:

- Corrected top border size for wxStaticBox with empty label (nusi)

wxMSW:

- Fixed wxFileName::GetSize() for large files

wxGTK:

- Fixed handling of accelerators using PageUp/Down keys


2.8.2
-----

All:

- Added wxSizerFlags::Shaped() and FixedMinSize() methods.
- Added wxCSConv::IsOk() (Manuel Martin).
- Added wxDateTime::GetDateOnly().
- Made wxTextFile work with unseekable files again (David Hart).
- Added wxCONFIG_USE_SUBDIR flag to wxFileConfig (Giuseppe Bilotta).